apps/baz/manifests.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: baz
  labels:
    app: baz
spec:
  selector:
    app: baz
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baz
  labels:
    app: baz
spec:
  selector:
    matchLabels:
      app: baz
  template:
    metadata:
      labels:
        app: baz
    spec:
      serviceAccountName: baz
      containers:
        - name: baz
          image: baz:latest
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: baz-root-route
  namespace: default
  annotations:
    retry.linkerd.io/http: "5xx"
    retry.linkerd.io/limit: "3"
    retry.linkerd.io/timeout: 1s
spec:
  parentRefs:
    - name: baz
      kind: Service
      group: core
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
